Fix color contrast

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -2,10 +2,7 @@ header {
   background-color: black;
   background:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), asset-url("thomas-habr-6NmnrAJPq7M-unsplash.jpg");
   background-size: 100% 170%;
-  padding: 0;
-  margin: 0;
   box-shadow: .2px .2px 20px #242424;
-
 }
 
 header h1,
@@ -15,6 +12,7 @@ header h5,
 header a,
 header .nav-link,
 .fas {
+  background-color: transparent;
     color: white;
     font-weight: bold;
 }
